--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 * {
   margin: 0;
 }
+button {
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px 0 10px 0;
+}
+input{
+  border-radius: 0px 10px 0px 10px;
+  border: none;
+}
+input:hover{
+    cursor: pointer;
+    border: none;
+  }
+  input:focus {
+    outline: 3px solid white;
+    outline-offset: 2px;
+}
